@@ -24,6 +24,19 @@
  *  $Id$
  */
 
+function bankaccount($id)
+{
+	global $CONFIG;
+	if ($CONFIG[finances]['iban']) 
+	{
+		$cc = "2521";	// Kod kraju - Polska
+    		$account = sprintf("%02d",98-bcmod($CONFIG[finances]['account'].sprintf("%012d",$id).$cc."00",97)).$CONFIG[finances]['account'].sprintf("%012d",$id);
+	} 
+	else
+    		$account = (! $CONFIG[finances]['account'] ? trans("Not set") : $CONFIG[finances]['account']);
+        return $account;
+}
+		
 function uptimef($ts)
 {
 	if($ts==0)
